# awesome-note2

./: .gitignore  README.md  TECH.xmind
algorithm/: README.md  pom.xml
alibaba/alibaba-data-upload/: README.md  pom.xml  数据入湖测试工具.xmind
alibaba/alibaba-edas/: pom.xml
alibaba/alibaba-odps/: pom.xml
alibaba/alibaba-rocketmq/: pom.xml
apache/apache-hadoop/: README.md  pom.xml
apache/apache-hbase/: pom.xml
apache/apache-kafka/: pom.xml
apache/apache-mina/: pom.xml
apache/apache-poi/: city.xlsx  city_column.xlsx  pom.xml
apache/apache-shiro/: pom.xml
apache/apache-wicket/: pom.xml
apache/apache-zookeeper/: README.md  pom.xml
cache/redis/: README.md  pom.xml
data-structure/: README.md  pom.xml
ddd-leave-service/: README.md  pom.xml
er/: dolphinscheduler.mwb  dolphinscheduler.mwb.bak
fastDFS/: pom.xml
flowable/: README.md  pom.xml
generator/: README.md  pom.xml
gin-starter/: go.sum  main.go
gpt_flask/: app.py  requirements.txt
id-generator/: pom.xml
langchain/: main.py
leetcode/: README.md  pom.xml
llm-moon-landing/: README.md  pyproject.toml  utils.py
llm-moon-landing/ernie/: 01.ERNIE-Speed-8K.ipynb  ernie_utils.py
llm-moon-landing/huggingface/BAAI/: 01.bge-reranker-large.ipynb  术语表.csv
llm-moon-landing/huggingface/llama/: Meta-Llama-3.1-8B-Api.ipynb  Meta-Llama-3.1-8B.ipynb
llm-moon-landing/langchain/: helloworld.py
llm-moon-landing/openai-gpt/: openai.py
llm-moon-landing/openai/hitbricks/: game_hitbricks.py
llm_uat/: mess_client.py  stepfun_client.py  until.py
shardingsphere/: pom.xml
sso/: README.md  pom.xml
(+1776 files in other folders)
